{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 17,
  "lineage": "0df85e18-5ae0-7429-cf26-5b487605c308",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4fffc834",
            "arn": "arn:aws:ec2:us-east-1:796631976943:instance/i-0a7c36d283c6c5f20",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7c36d283c6c5f20",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "vpctestkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2588558351b7eb5",
            "private_dns": "ip-10-0-2-234.ec2.internal",
            "private_ip": "10.0.2.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013629a1873e9f771",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0988075d4917553a4",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-073d378706fc35213"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgdb",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4fffc834",
            "arn": "arn:aws:ec2:us-east-1:796631976943:instance/i-0def2a412dc240592",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0def2a412dc240592",
            "instance_state": "running",
            "instance_type": "t1.micro",
            "ipv6_address_count": 0,
            "key_name": "vpctestkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030fb1018c5ccadbd",
            "private_dns": "ip-10-0-1-72.ec2.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-54-91-35-126.compute-1.amazonaws.com",
            "public_ip": "54.91.35.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037714712ac26d294",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0d3f75d5078231a62",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ed2f5f787f32c23"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgweb",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:internet-gateway/igw-08796dd552ac22ffe",
            "id": "igw-08796dd552ac22ffe",
            "owner_id": "796631976943",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e830151ce30affca",
            "owner_id": "796631976943",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08796dd552ac22ffe",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1393a2de086c3e5",
            "route_table_id": "rtb-0e830151ce30affca",
            "subnet_id": "subnet-0d3f75d5078231a62"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:security-group/sg-073d378706fc35213",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-073d378706fc35213",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_test_web",
            "name_prefix": "",
            "owner_id": "796631976943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:security-group/sg-02ed2f5f787f32c23",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [],
            "id": "sg-02ed2f5f787f32c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_test_web",
            "name_prefix": "",
            "owner_id": "796631976943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:subnet/subnet-0988075d4917553a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0988075d4917553a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796631976943",
            "tags": {
              "Name": "Database Private Subnet"
            },
            "tags_all": {
              "Name": "Database Private Subnet"
            },
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:subnet/subnet-0d3f75d5078231a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d3f75d5078231a62",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796631976943",
            "tags": {
              "Name": "Web Public Subnet"
            },
            "tags_all": {
              "Name": "Web Public Subnet"
            },
            "vpc_id": "vpc-06f5aadc667c5bfd1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796631976943:vpc/vpc-06f5aadc667c5bfd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0efdf808dbd7f0a6c",
            "default_route_table_id": "rtb-00623ed12f5b8a5dc",
            "default_security_group_id": "sg-059f82aff6a5f6b2f",
            "dhcp_options_id": "dopt-e58ad19f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06f5aadc667c5bfd1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00623ed12f5b8a5dc",
            "owner_id": "796631976943",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}